@@ -22,34 +22,47 @@ import net.mcreator.element.BaseType;
 import net.mcreator.element.GeneratableElement;
 import net.mcreator.element.parts.*;
 import net.mcreator.element.parts.Fluid;
+import net.mcreator.element.parts.Particle;
 import net.mcreator.element.parts.procedure.NumberProcedure;
 import net.mcreator.element.parts.procedure.Procedure;
 import net.mcreator.element.parts.procedure.StringListProcedure;
 import net.mcreator.element.types.interfaces.*;
 import net.mcreator.generator.GeneratorFlavor;
+import net.mcreator.io.FileIO;
 import net.mcreator.minecraft.MCItem;
 import net.mcreator.minecraft.MinecraftImageGenerator;
+import net.mcreator.ui.minecraft.states.PropertyData;
 import net.mcreator.ui.minecraft.states.PropertyDataWithValue;
+import net.mcreator.ui.minecraft.states.StateMap;
+import net.mcreator.ui.minecraft.states.block.BlockStatePropertyUtils;
 import net.mcreator.ui.workspace.resources.TextureType;
+import net.mcreator.util.ListUtils;
 import net.mcreator.util.image.ImageUtils;
+import net.mcreator.workspace.Workspace;
 import net.mcreator.workspace.elements.ModElement;
 import net.mcreator.workspace.references.ModElementReference;
 import net.mcreator.workspace.references.ResourceReference;
 import net.mcreator.workspace.references.TextureReference;
 import net.mcreator.workspace.resources.Model;
 import net.mcreator.workspace.resources.TexturedModel;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.io.File;
 import java.util.*;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @SuppressWarnings({ "unused", "NotNullFieldNotInitialized" }) public class Block extends GeneratableElement
-		implements IBlock, IItemWithModel, ITabContainedElement, ISpecialInfoHolder, IBlockWithBoundingBox {
+		implements IBlock, IItemWithModel, ITabContainedElement, ISpecialInfoHolder, IBlockWithBoundingBox,
+		IMultipleNames {
+
+	private static final Logger LOG = LogManager.getLogger(Block.class);
 
 	@TextureReference(TextureType.BLOCK) public TextureHolder texture;
 	@TextureReference(TextureType.BLOCK) public TextureHolder textureTop;
@@ -64,6 +77,8 @@ import java.util.stream.Collectors;
 	public boolean emissiveRendering;
 	public boolean displayFluidOverlay;
 
+	@TextureReference(TextureType.BLOCK) @ResourceReference("model") public List<Block.StateEntry> states;
+
 	@ModElementReference @ResourceReference("animation") public List<AnimationEntry> animations;
 
 	@TextureReference(TextureType.ITEM) public TextureHolder itemTexture;
@@ -72,6 +87,10 @@ import java.util.stream.Collectors;
 	public String blockBase;
 	public String blockSetType;
 	public MItemBlock pottedPlant;
+	public Particle leavesParticleType;
+	public double leavesParticleChance;
+	@TextureReference(TextureType.ENTITY) public TextureHolder signEntityTexture;
+	@TextureReference(TextureType.SCREEN) public TextureHolder signGUITexture;
 
 	public String tintType;
 	public boolean isItemTinted;
@@ -109,6 +128,7 @@ import java.util.stream.Collectors;
 	public double enchantPowerBonus;
 	public boolean plantsGrowOn;
 	public boolean canRedstoneConnect;
+	public boolean hasCustomOpacity;
 	public int lightOpacity;
 
 	public int tickRate;
@@ -145,7 +165,7 @@ import java.util.stream.Collectors;
 	public Sound placeSound;
 	public Sound stepSound;
 
-	public int luminance;
+	public NumberProcedure luminance;
 	public boolean unbreakable;
 	public String vanillaToolTier;
 	public Procedure additionalHarvestCondition;
@@ -225,6 +245,7 @@ import java.util.stream.Collectors;
 		this.customProperties = new ArrayList<>();
 
 		this.blockSetType = "OAK";
+		this.leavesParticleChance = 0;
 		this.tintType = "No tint";
 		this.boundingBoxes = new ArrayList<>();
 		this.restrictionBiomes = new ArrayList<>();
@@ -232,6 +253,7 @@ import java.util.stream.Collectors;
 		this.slipperiness = 0.6;
 		this.speedFactor = 1.0;
 		this.jumpFactor = 1.0;
+		this.hasCustomOpacity = true;
 		this.colorOnMap = "DEFAULT";
 		this.noteBlockInstrument = "harp";
 		this.aiPathNodeType = "DEFAULT";
@@ -250,6 +272,32 @@ import java.util.stream.Collectors;
 		this.vibrationalEvents = new ArrayList<>();
 
 		this.animations = new ArrayList<>();
+
+		this.states = new ArrayList<>();
+	}
+
+	@Override public void finalizeModElementGeneration() {
+		if (isSign()) {
+			try {
+				File entityTextureLocation = new File(
+						getModElement().getFolderManager().getTexturesFolder(TextureType.OTHER),
+						("Sign".equals(blockBase) ? "entity/signs/" : "entity/signs/hanging/")
+								+ getModElement().getRegistryName() + ".png");
+				FileIO.copyFile(signEntityTexture.toFile(TextureType.ENTITY), entityTextureLocation);
+			} catch (Exception e) {
+				LOG.error("Failed to copy sign entity texture", e);
+			}
+			if ("HangingSign".equals(blockBase)) {
+				try {
+					File GUITextureLocation = new File(
+							getModElement().getFolderManager().getTexturesFolder(TextureType.OTHER),
+							"gui/hanging_signs/" + getModElement().getRegistryName() + ".png");
+					FileIO.copyFile(signGUITexture.toFile(TextureType.SCREEN), GUITextureLocation);
+				} catch (Exception e) {
+					LOG.error("Failed to copy sign GUI texture", e);
+				}
+			}
+		}
 	}
 
 	public int renderType() {
@@ -274,6 +322,10 @@ import java.util.stream.Collectors;
 		return "Door".equals(blockBase);
 	}
 
+	public boolean isSign() {
+		return "Sign".equals(blockBase) || "HangingSign".equals(blockBase);
+	}
+
 	public boolean shouldOpenGUIOnRightClick() {
 		return guiBoundTo != null && openGUIOnRightClick;
 	}
@@ -290,11 +342,18 @@ import java.util.stream.Collectors;
 		return dropAmount > 0 && (hasBlockItem || hasCustomDrop() || "FlowerPot".equals(blockBase));
 	}
 
+	public boolean supportsBlockStates() {
+		if (getItemModel().getType() == Model.Type.JAVA)
+			return false;
+
+		return blockBase == null || blockBase.isEmpty();
+	}
+
 	@Override public boolean isFullCube() {
 		if ("Stairs".equals(blockBase) || "Slab".equals(blockBase) || "Fence".equals(blockBase) || "Wall".equals(
 				blockBase) || "TrapDoor".equals(blockBase) || "Door".equals(blockBase) || "FenceGate".equals(blockBase)
 				|| "EndRod".equals(blockBase) || "PressurePlate".equals(blockBase) || "Button".equals(blockBase)
-				|| "FlowerPot".equals(blockBase))
+				|| "FlowerPot".equals(blockBase) || "Sign".equals(blockBase) || "HangingSign".equals(blockBase))
 			return false;
 
 		return IBlockWithBoundingBox.super.isFullCube();
@@ -366,11 +425,30 @@ import java.util.stream.Collectors;
 	}
 
 	@Override public List<MCItem> providedMCItems() {
-		return List.of(new MCItem.Custom(this.getModElement(), null, hasBlockItem ? "block" : "block_without_item"));
+		ArrayList<MCItem> retval = new ArrayList<>();
+		retval.add(new MCItem.Custom(this.getModElement(), null, hasBlockItem ? "block" : "block_without_item"));
+
+		if (isSign()) // Provide sign wall block
+			retval.add(new MCItem.Custom(this.getModElement(), "wall", "block_without_item", "Wall sign"));
+
+		return retval;
+	}
+
+	@Override public ImageIcon getIconForMCItem(Workspace workspace, String suffix) {
+		if ("wall".equals(suffix)) {
+			if ("Sign".equals(blockBase)) {
+				return new ImageIcon(MinecraftImageGenerator.Preview.generateWallSignIcon(
+						signEntityTexture.getImage(TextureType.ENTITY)));
+			} else if ("HangingSign".equals(blockBase)) {
+				return new ImageIcon(MinecraftImageGenerator.Preview.generateWallHangingSignIcon(
+						signEntityTexture.getImage(TextureType.ENTITY)));
+			}
+		}
+		return null;
 	}
 
 	@Override public List<MCItem> getCreativeTabItems() {
-		return hasBlockItem ? providedMCItems() : Collections.emptyList();
+		return hasBlockItem ? List.of(new MCItem.Custom(this.getModElement(), null, "block")) : Collections.emptyList();
 	}
 
 	@Override public StringListProcedure getSpecialInfoProcedure() {
@@ -423,6 +501,11 @@ import java.util.stream.Collectors;
 		return vibrationalEvents.stream().map(e -> e.getMappedValue(1)).collect(Collectors.toSet());
 	}
 
+	public int getLeavesParticleColor() {
+		return ImageUtils.getAverageColor(ImageUtils.toBufferedImage(texture.getImage(TextureType.BLOCK))).brighter()
+				.brighter().getRGB();
+	}
+
 	public TextureHolder textureTop() {
 		return textureTop == null || textureTop.isEmpty() ? texture : textureTop;
 	}
@@ -445,6 +528,180 @@ import java.util.stream.Collectors;
 
 	public TextureHolder getParticleTexture() {
 		return particleTexture == null || particleTexture.isEmpty() ? texture : particleTexture;
+	}
+
+	/**
+	 * @return List of user-defined states or empty list if none defined or of the current block does not support custom block states
+	 */
+	public List<StateEntry> getDefinedStates() {
+		if (!supportsBlockStates() || states.isEmpty())
+			return List.of();
+		return new ArrayList<>(states);
+	}
+
+	/**
+	 * @return List of {@link #states} with missing state combinations autofilled
+	 */
+	public List<StateEntry> getStateCombinations() {
+		if (!supportsBlockStates() || states.isEmpty())
+			return List.of();
+
+		// add user-defined states
+		ArrayList<StateEntry> retval = new ArrayList<>(states);
+
+		// autofill missing state condition combinations below
+
+		// collect all used properties (all state maps use all properties as UI validation ensures this)
+		Set<PropertyData<?>> usedProperties = states.getFirst().stateMap.keySet();
+
+		// generate a list of all possible state condition combinations
+		Map<PropertyData<?>, List<Object>> valueMap = new LinkedHashMap<>();
+		for (PropertyData<?> prop : usedProperties) {
+			valueMap.put(prop, BlockStatePropertyUtils.getPossiblePropertyValues(prop));
+		}
+
+		Set<StateMap> possibleStateCombinations = new HashSet<>();
+		for (Map<PropertyData<?>, Object> combo : ListUtils.cartesianProduct(valueMap)) {
+			StateMap stateCombination = new StateMap();
+			stateCombination.putAll(combo);
+			possibleStateCombinations.add(stateCombination);
+		}
+
+		// remove combinations that are already handled
+		possibleStateCombinations.removeAll(states.stream().map(s -> s.stateMap).collect(Collectors.toSet()));
+
+		// add combinations that are missing
+		for (StateMap possibleStateCombination : possibleStateCombinations) {
+			var stateEntry = new StateEntry();
+			stateEntry.renderType = -1; // use the default model
+			stateEntry.stateMap = possibleStateCombination;
+			retval.add(stateEntry);
+		}
+
+		return retval;
+	}
+
+	public List<StateEntry> getDefinedStatesWithCustomShape() {
+		List<StateEntry> retval = new ArrayList<>();
+		for (StateEntry stateEntry : getDefinedStates()) {
+			if (stateEntry.hasCustomBoundingBox && !stateEntry.isFullCube()) {
+				retval.add(stateEntry);
+			}
+		}
+		return retval;
+	}
+
+	public List<String> getPropertiesUsedInStates() {
+		if (!supportsBlockStates() || states.isEmpty())
+			return List.of();
+		return states.getFirst().stateMap.keySet().stream().map(PropertyData::getName).collect(Collectors.toList());
+	}
+
+	public String getWallName() {
+		String elementName = this.getModElement().getName();
+		if (elementName.endsWith("HangingSign"))
+			return elementName.substring(0, elementName.length() - 11) + "WallHangingSign";
+		else if (elementName.endsWith("Sign"))
+			return elementName.substring(0, elementName.length() - 4) + "WallSign";
+		else
+			return "Wall" + elementName;
+	}
+
+	public String getWallRegistryName() {
+		String registryName = this.getModElement().getRegistryName();
+		if (registryName.endsWith("hanging_sign"))
+			return registryName.substring(0, registryName.length() - 12) + "wall_hanging_sign";
+		else if (registryName.endsWith("sign"))
+			return registryName.substring(0, registryName.length() - 4) + "wall_sign";
+		else
+			return "wall_" + registryName;
+	}
+
+	public String getWallRegistryNameUpper() {
+		return getWallRegistryName().toUpperCase(Locale.ENGLISH);
+	}
+
+	@Override public Collection<String> getAdditionalNames() {
+		if (isSign())
+			return List.of(this.getWallName());
+		else
+			return Collections.emptyList();
+	}
+
+	public static class StateEntry implements IWorkspaceDependent, IItemWithModel, IBlockWithBoundingBox {
+
+		@TextureReference(TextureType.BLOCK) public TextureHolder texture;
+		@TextureReference(TextureType.BLOCK) public TextureHolder textureTop;
+		@TextureReference(TextureType.BLOCK) public TextureHolder textureLeft;
+		@TextureReference(TextureType.BLOCK) public TextureHolder textureFront;
+		@TextureReference(TextureType.BLOCK) public TextureHolder textureRight;
+		@TextureReference(TextureType.BLOCK) public TextureHolder textureBack;
+		public int renderType;
+		@Nonnull public String customModelName;
+
+		@TextureReference(TextureType.BLOCK) public TextureHolder particleTexture;
+
+		public boolean hasCustomBoundingBox;
+		public List<BoxEntry> boundingBoxes;
+
+		public StateMap stateMap;
+
+		@Nullable transient Workspace workspace;
+
+		@Override public void setWorkspace(@Nullable Workspace workspace) {
+			this.workspace = workspace;
+		}
+
+		@Nullable @Override public Workspace getWorkspace() {
+			return workspace;
+		}
+
+		// Helper methods so the same templates as for the main model can be used
+
+		public TextureHolder textureTop() {
+			return textureTop == null || textureTop.isEmpty() ? texture : textureTop;
+		}
+
+		public TextureHolder textureLeft() {
+			return textureLeft == null || textureLeft.isEmpty() ? texture : textureLeft;
+		}
+
+		public TextureHolder textureFront() {
+			return textureFront == null || textureFront.isEmpty() ? texture : textureFront;
+		}
+
+		public TextureHolder textureRight() {
+			return textureRight == null || textureRight.isEmpty() ? texture : textureRight;
+		}
+
+		public TextureHolder textureBack() {
+			return textureBack == null || textureBack.isEmpty() ? texture : textureBack;
+		}
+
+		public TextureHolder getParticleTexture(TextureHolder fallback) {
+			return particleTexture == null || particleTexture.isEmpty() ? fallback : particleTexture;
+		}
+
+		@Override public Model getItemModel() {
+			Model.Type modelType = Model.Type.BUILTIN;
+			if (renderType == 2)
+				modelType = Model.Type.JSON;
+			else if (renderType == 3)
+				modelType = Model.Type.OBJ;
+			return Model.getModelByParams(workspace, customModelName, modelType);
+		}
+
+		@Override public Map<String, TextureHolder> getTextureMap() {
+			Model model = getItemModel();
+			if (model instanceof TexturedModel && ((TexturedModel) model).getTextureMapping() != null)
+				return ((TexturedModel) model).getTextureMapping().getTextureMap();
+			return new HashMap<>();
+		}
+
+		@Override public @Nonnull List<BoxEntry> getValidBoundingBoxes() {
+			return boundingBoxes.stream().filter(BoxEntry::isNotEmpty).collect(Collectors.toList());
+		}
+
 	}
 
 	public static class AnimationEntry {
